# mineflake

./: .editorconfig  .gitlab-ci.yml  .woodpecker.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  default.nix  flake.nix  pin_url.sh  repo-latest.json  repo.json  shell.nix
.github/: commit_and_push.py  dependabot.yml  labeler.yml  pin_all.py
.github/repo_pinner/: index.mjs  package-lock.json  package.json
.github/workflows/: auto-merge.yml  build.yml  cache.yml  ci.yml  codestyle.yml  docs.yml  labeler.yml  lint.yml  main.yml  pin.yml  test_cli.yml  update-flake.yml
.woodpecker/: .docs.yml  .lint.yml  docs.yml  pin.yml  pin_all.py
cli/: .editorconfig  .gitignore  Cargo.toml  README.md  default.nix
cli/src/: lib.rs  main.rs
cli/src/bukkit/: linker.rs  mod.rs
cli/src/commands/: apply.rs  generate.rs  mod.rs
cli/src/structures/: bukkit.rs  bungee.rs  common.rs  mod.rs  spigot.rs  structures.rs
cli/src/structures/common/: config.rs  file.rs  generator.rs  mod.rs  package.rs
cli/src/utils/: config.rs  linker.rs  log.rs  merge.rs  mod.rs  net.rs
docs/: README.md  creating-plugin.md  creating-plugin.xml  default.nix  how-it-works.md  how-it-works.xml  install.md  install.xml  man-pages.xml  man-some.xml  manual.xml  mkdocs.yml  requirements.txt  usage.md  usage.xml
docs/docs/: index.md
docs/docs/configuration/: generators.md  overview.md
docs/docs/packaging/: manifest.md  overview.md
docs/docs/usage/: docker.md  nixos.md  systemd.md
docs/en/: Creating-plugin.md  How-mineflake-works.md  Installing-mineflake.md  README.md  Usage.md
docs/ru/: Creating-plugin.md  How-mineflake-works.md  Install.md  README.md  Usage.md
modules/: bungeecord.nix  default.nix  lazymc.nix  mineflake.nix  options.nix  permissions.nix  properties.nix  utils.nix
pkgs/: default.nix
pkgs/bungee/: default.nix
pkgs/other/lazymc/: default.nix
pkgs/other/utils/: default.nix
pkgs/plugins/: default.nix  shortbin.nix
pkgs/plugins/advancedban/: Layouts.yml.json  Messages.yml.json  config.yml.json  default.nix
pkgs/plugins/authme/: config.yml.json  default.nix  package.yml
pkgs/plugins/authmebungee/: config.yml.json  default.nix
pkgs/plugins/blockrename/: config.yml.json  default.nix
pkgs/plugins/chatty/: config.yml.json  default.nix  en.yml.json
pkgs/plugins/clans/: config.json  default.nix  messages.json
pkgs/plugins/cleanmotd/: config.yml.json  default.nix  messages.yml.json
pkgs/plugins/coreprotect/: config.yml  default.nix
pkgs/plugins/discordsrv/: config.yml.json  default.nix  linking.yml.json  messages.yml.json  synchronization.yml.json  voice.yml.json
pkgs/plugins/elyby/: default.nix
pkgs/plugins/essentialsx/: chat.nix  discord.json  geo.json  geo.nix  spawn.nix  xmpp.json  xmpp.nix
pkgs/plugins/illegalstack/: config.yml.json  default.nix
pkgs/plugins/inventoryrollbackplus/: config.yml.json  default.nix  messages.yml.json
pkgs/plugins/itemcontrol/: default.nix
pkgs/plugins/lightchatbubbles/: config.yml.json  default.nix
pkgs/plugins/luckperms/: default.nix
pkgs/plugins/negativity/: default.nix
pkgs/plugins/placeholderapi/: config.yml.json  default.nix
pkgs/plugins/plasmovoice/: config.yml.json  default.nix
pkgs/plugins/playtime/: config.yml.json  default.nix
pkgs/plugins/protocollib/: config.yml.json  default.nix
pkgs/plugins/redlib/: default.nix
pkgs/plugins/shutdown/: config.yml.json  default.nix  lang.yml.json
pkgs/plugins/skinsrestorer/: config.yml.json  default.nix  messages.yml.json
pkgs/plugins/tablist/: animcreator.yml.json  config.yml.json  (+4 more)
pkgs/servers/: default.nix  shortbin.nix
pkgs/spigot/: default.nix
pkgs/utils/: default.nix
templates/docker/: docker.nix  flake.nix
(+62 files in other folders)
