[package]
name = "mineflake"
version = "0.1.0"
edition = "2021"
description = "A CLI that powers Mineflake"
authors = [
  "Egor Ternovoy <cofob@riseup.net>",
  "Mineflake Contributors"
]
license = "MIT"
repository = "https://github.com/nix-community/mineflake"
documentation = "https://github.com/nix-community/mineflake/tree/main/docs"
readme = "README.md"
keywords = ["mineflake", "nix", "nixos", "minecraft", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# Serialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.9"

# CLI
clap = { version = "^4", features = ["derive"] }

# Urls
url = "^2"

# Logging
log = "^0.4"
pretty_env_logger = "^0.4"

# Errors
anyhow = "^1"

[profile.release]
overflow-checks = true
incremental = false
opt-level = 2
debug = false
strip = true
lto = true
