[package]
name = "mineflake"
version = "0.2.2"
edition = "2021"
description = "A CLI that powers Mineflake"
authors = [
  "Egor Ternovoy <cofob@riseup.net>",
  "Mineflake Contributors"
]
license = "MIT"
repository = "https://github.com/nix-community/mineflake"
documentation = "https://mineflake.cofob.dev/"
readme = "README.md"
keywords = ["mineflake", "nix", "nixos", "minecraft", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# Serialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_yaml = "^0.9"

# CLI
clap = { version = "^4", features = ["derive"], optional = true }

# Net
url = { version = "^2", features = ["serde"], optional = true }
reqwest = { version = "^0.12", features = ["blocking", "json", "default-tls"], default-features = false, optional = true }
sha256 = { version = "^1", optional = true }
zip = { version = "^0.6", optional = true }
copy_dir = { version = "^0.1", optional = true }
num_cpus = { version = "^1.16", optional = true }

# Logging
log = "^0.4"
pretty_env_logger = { version = "^0.5", optional = true }

# Errors
anyhow = "^1"

[features]
default = ["cli", "net"]
cli = ["clap", "pretty_env_logger"]
net = ["url", "reqwest", "sha256", "zip", "copy_dir", "num_cpus"]

[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
strip = true
lto = true
